--- a/src/app/modules/size-spinner/size-spinner.component.scss
+++ b/src/app/modules/size-spinner/size-spinner.component.scss
@@ -1,3 +1,11 @@
 // .mat-grid-tile{
 // background-color: lightblue;
 // }
+
+// .mat-spinner circle {
+//    r: 5px;
+// }
+
+// .mat-spinner{
+//     zoom:0.2;
+// }
